added golem boss and refactored assets to better accomadate bosses